RESOLVED FIXED87319
REGRESSION (115573): Incorrect rounding of margins for floats
https://bugs.webkit.org/show_bug.cgi?id=87319
Summary REGRESSION (115573): Incorrect rounding of margins for floats
Emil A Eklund
Reported 2012-05-23 16:31:52 PDT
Due to differences in rounding triggered by the switch of Length::value to floating point we round margins differently for floating elements and their parent container causing unwanted wrapping on certain sites and zoom levels. Downstream chromium bug report: http://code.google.com/p/chromium/issues/detail?id=128310
Attachments
Patch (4.35 KB, patch)
2012-05-23 16:58 PDT, Emil A Eklund
no flags
Patch (4.60 KB, patch)
2012-05-24 12:04 PDT, Emil A Eklund
no flags
Archive of layout-test-results from ec2-cr-linux-04 (550.31 KB, application/zip)
2012-05-24 14:32 PDT, WebKit Review Bot
no flags
Patch for landing (18.73 KB, patch)
2012-05-24 16:45 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-05-23 16:58:40 PDT
Eric Seidel (no email)
Comment 2 2012-05-23 17:13:27 PDT
Comment on attachment 143683 [details] Patch LGTM.
Emil A Eklund
Comment 3 2012-05-23 17:17:34 PDT
Thanks for the quick review Eric!
WebKit Review Bot
Comment 4 2012-05-23 18:30:23 PDT
Comment on attachment 143683 [details] Patch Clearing flags on attachment: 143683 Committed r118297: <http://trac.webkit.org/changeset/118297>
WebKit Review Bot
Comment 5 2012-05-23 18:30:28 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6 2012-05-23 20:39:40 PDT
Re-opened since this is blocked by 87338
Emil A Eklund
Comment 7 2012-05-24 12:04:17 PDT
Emil A Eklund
Comment 8 2012-05-24 12:06:09 PDT
Would you mind taking another look Eric? It's basically the same change as before but with a slightly different reference html file.
Alexey Proskuryakov
Comment 9 2012-05-24 13:44:57 PDT
Eric Seidel (no email)
Comment 10 2012-05-24 13:54:58 PDT
Comment on attachment 143868 [details] Patch LGTM.
WebKit Review Bot
Comment 11 2012-05-24 14:32:25 PDT
Comment on attachment 143868 [details] Patch Attachment 143868 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12805252 New failing tests: fast/block/float/floats-with-margin-should-not-wrap.html
WebKit Review Bot
Comment 12 2012-05-24 14:32:29 PDT
Created attachment 143895 [details] Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Emil A Eklund
Comment 13 2012-05-24 16:45:17 PDT
Created attachment 143924 [details] Patch for landing
Emil A Eklund
Comment 14 2012-05-24 17:15:49 PDT
Note You need to log in before you can comment on or make changes to this bug.